--- a/04-conclusion.Rmd
+++ b/04-conclusion.Rmd
@@ -1,64 +1,83 @@
 # Discussion
 
-Due to the pLLP’s relative simplicity (~100 cells) and excellent accessibility for advanced light-microscopes (~1 cell layer beneath the skin), it promises an _in toto_ understanding and complete model of factors influencing its development.
-To create a robust model, it is necessary to have robust methods that allow to generate large datasets of precise and meaningful measurements. The tools and methods developed for this work have proven very useful in pinning down of essential developmental aspects and answering important biological questions with quantitative certainty. Still, due to the complexity of biological systems some points remain open for discussion.
-
 ## Methods
 
-### Mounting
+Due to the pLLP’s relative simplicity (~100 cells) and excellent accessibility for advanced light-microscopes (~1 cell layer beneath the skin), it promises an _in toto_ understanding and complete model of factors influencing its development.
 
-```{r klein_2019_disc_1, out.width = '95%'}
-knitr::include_graphics("files/pubs/klein_2019/004_02.jpg")
-```
+To create an accurate and robust model of a developmental process, it is necessary to have precise, meaningful and accurate data. Furthermore,  to test a hypothesis thoroughly, it is beneficial to be able to analyze a dataset in different ways. This gives the advantage to directly link datapoints to each other without having to record a separate set of data, which comes at cost of data consistency since (1) the samples are in fact different ones (2) they have to be prepared in a different way and (3) the measuring tool is a different one. One way to to overcome this deficiency is standardization and automation which, if accomplished, would allow to generate large datasets of precise measurements. The tools and methods developed for this work have proven easy to adopt even by novice users and very useful in extracting large scale quantitative information. 
 
-```{r klein_2019_disc_2, out.width = '95%'}
-knitr::include_graphics("files/pubs/klein_2019/005.jpg")
-```
+### Standardized mounting
 
-```{r klein_2019_disc_3, out.width = '95%'}
-knitr::include_graphics("files/pubs/klein_2019/006_01.jpg")
-```
+Although efforts have been made to standardize zebrafish embryo mounting and imaging, most protocols were designed for high throughput widefield screening [@Wittbrodt2014; @Yu2018; @Pulak2016; @Donoughe2018] rather than high-resolution confocal microscopy [Herrgen2009; @A.2015; @Hirsinger2017]. In recent years a couple of studies tackled specifically this issue by developing standardized mounting methods using 3D printed stamps [@Campinho2018; @Donoughe2018; @Masselink2014; @Alessandri2017]. The solution provided here offers a much more efficient of mounting zebrafish embryos for high resolution confocal microscopy.
+
+Most methods concerned with specimen mounting are developed by microscopy specialized labs that are working with state-of-the-art microscopes. Usually, the most successful of these developments are those which find a collaboration partner that can provide a specimen that fits the microscope use case. Still, for most labs the microscope technology and mounting technique is not in reach since they are usually expensive and are targeted towards very specific scientific questions. The mounting method described in this thesis targets a gap that previously had not been filled. Today, the most useful and most spread microscope within the developmental biology community is the _spinning disc_ microscope. It allows to record rather low-res time-lapse movies as well as high-res 3-D imaging of multiple specimen at once [@Graf2005]. Furthermore, sample preparation for spinning disc microscopy does not differ from preparing samples for standard brightfield imaging. Therefore, for many it is a door opener into advanced microscopy. 
+
+For zebrafish, for many years the standard mounting technique was to mount zebrafish embryos on their side without assistance on a flat surface in a rather fast solidifying mounting medium. Since the embryos are not flat on their side they tend to fall over and have to be re-positioned frequently. Furthermore, the researcher needs to be quite skilled to know how to handle the embryo so it moves in a desired direction. Taken together, this limits the number of embryos that can be mounted simultaneously tremendously. Since one can harvest around a hundred eggs from a zebrafish female from a single crossing, for live imaging most of them could not be used or it would be extremely time consuming to mount and image all of them. Therefore, most of the eggs / larvae are not used and are discarded after some time. Therefore, besides the described benefits in chapter @\ref(res-mount), another main advantage of the method is that is blends in neatly in the already existing microscopy resources. Since the method is also easy to adopt, it increases the data output and time efficiency by a multitude. I chose to mount in round dishes because (1) they are used classically and (2) the selection with the manufacturers is more suited for this application. However, round dishes require a manual alignment of the embryonic body axes with the microscope stage axes - which may compromise the use with pre-set positions if the dish is not placed accurately onto the microscope sample holder. By using rectangular dished togehter with a rectangular stamp it would be possible to minimize the angular degrees of freedom.
+
+### Automated image analysis
+
+Humans depend on vision to orient themselves in their environment. Even though, from a technical perspective, eyesight is not at all a perfect system (blind spot, foveal centralis, farsightedness, shortsightedness, ...), humans usually don't perceive these shortcomings. This is because vision is mostly just a heavily processed and augmented version of the faulty and blurry data coming from the eye, processed by the brain. The brain on the other hand is a very advanced pattern recognition system [@Mattson2014].
+
+For humans analyzing image data is a tedious and tiring process. First, one has to be trained to detect certain features in images, then one has to recognize those features in many different images (from different angles, different sizes, ...), sometimes going into the thousands. Furthermore, even though humans can orient themselves in a 3-D space, for most people recognizing image features in 3-D is a spacial challenge. Weather analyzing images in 2-D or 3-D, it demands a high degree of attention which, in order to ensure high quality data, in turn requires the analyst to have regular breaks. Computers are made to process data. Therefore, to overcome the shortcomings of a human image analyst it is instead possible to train a computer program to specifically detect image features. 
+
+#### 2D Analysis
+
+The anallyzr2D and anallyzr2DT detect rather simple image features - the deposited Neuromasts, the pLLP and the nuclei within each structure. While this could, even for large datasets, still be done by a human analyst, one also needs to take into account human _confirmation bias_^[Assuming the selection of images analysed is randomized and the analyst doesn't know what he is looking at, the analyst could still _think_ to be looking at a certain mutant or wildype and therefore draw a line about a shape more or less generously. The algorithm on the other hand, depending on how its programmed, usually is not biased. Therefore, it generates more neutral and trustworthy measurements.] during an analysis session. Since the algorithm is not subject to fatigue, it is also less error prone.
+
+In addition to the analytical improvement, the anallzr2DT processes and prepares the images for further downstream processing in a way pLLP timelapses could not be analyzed before. In a timelapse of the LL the pLLP usually migrates from _anterior_ to _posterior_, while the embryo still grows. Since this means a shift of the position of the pLLP from timepoint to timepoint, it is hard to detect and analyze cellular dynamics within the pLLP. During processing of the anallzr2DT the migratory dimension as well as sideward movements of the pLLP are eliminated, making it possible to investigate single cell behaviour during migration more thoroughly. While CC count and CC position had been analysed before [@Matsuda2010b; @Durdu2014a], using this technique allowed us to conduct the most thoroughly and most accurate analysis conducted so far.
+
+#### 3D Analysis
+
+The anallyzr3D is able to segment and analyze cells within the pLLP in 3D and measure a cells apical area at a certain distance from the _apex_. Since the fluorescence signal in some areas of the cell can be very faint (e.g. in basal regions) or very high (e.g. in rosette centers, where many cell apices come together) it is almost impossible for a human analyst to track and detect the cells boundaries correctly. While manual 3D cell segmentation in the pLLP has been done before [@Harding2013], here I provided a method that allows for segmentation of all the cells of the pLLP and large datasets. Furthermore, for certain measurements and when comparing positions in 3D, a normalized orientation of cells and between specimen is necessary, which is taken care of by the standardized mounting method.
+
+For computational image analysis the researcher has different options in methodology where each have their pros and cons. (1) For segmentation, traditionally one would use thresholding or a _watershed_ algorithm. For the latter, the image is treated like a topological map, assuming higher gray values represent something topologically high and lower gray values something topologically low, the watershed algorithm then 'fills' the lower regions stating from the _peak_ of each maximum until it comes in touch with another filled region [@Vincent1991]. (2) Alternatively, one can also _train_ a computer to detect cell boundaries. With this technique, an artificial _neural network_ (part of machine and _deep learning_) is trained to detect image features on a training dataset where the features (cell membranes, nuclei, ...) were already marked by a human analyst. When the network has reached a certain precision through learning, it is asked to find the same features on a test dataset [@Ueda1993]. For the segmentation results, for the moment, neither option has a clear advantage over the other.
+
+For my analyses I wanted to make sure they were usable and reproducible by other people in the field. While there are people working on making machine learning approaches like deep learning more approachable to non-technical people (like most biologists are), they still require a very good understanding and knowledge of the subject and its respective implementation (typically programming languages like _python_ or _R_). Meanwhile, many biologists are familiar with the image analysis software _ImageJ_ resp. _FIJI_, which has a rich catalog of actively developed and maintained libraries or _update sites_. ImageJ again has the ability to record, parameterize and execute macro code, where it is possible to not only incorporate the core features, but also many of the update site plugins. This way, it is possible to compose a macro program that automates even challenging image analysis pipelines and to easily distribute it to a wide audience - instantly able to reproduce the analyses^[provided the necessary computing power]. In addition, this method is much more transparent in terms of how the features are acutally extracted and may be _forked_^[to open a parallel branch of development] to develop it further or adjust it to the users own needs.
+
+In addition to visualization, large multidimensional datasets offer the possibility for advanced computational methods such as Machine- and deep learning. For example one could label cells of a dataset as either leading, trailing, rosette, lateral, ... etc. to train an Machine learning model on. The model could then be used on unlabeled data to assign the previous learned labels to cells that fit the right parameters, a strategy that that has recently been published by J.Hartmann _et al._ [@Hartmann2020]. Yet another application example would be to use the Ground Truth image data generated for my studies to train a CNN that potentially would be more robust to data of different quality / resolution. For the future it would be interesting to apply this method on timeplapse movies too.
+
+### Rosette Detection
+
+While the anallzr3D actually detects and counts pLLP rosette centers using traditional image processing techniques, it does not quantify the rosettes maturity resp. to which degree it actually resembles a wild-type rosette. An inherent feature of object detection _via_ neural networks is that they tell us how safe it is for an object detected to acually be what it was trained to detect. In other words, neural networks will also detect objects which do not specifically resemble what they know from the training data - but with a lower detection _score_. While the interpretation of neural network results should be taken cautiously [@Ghorbani2019], for my analyses I interpreted the detection score as the _rosettiness_, or how much over all the pLLP is rosettized. 
+
+For classification tasks one can use _discriminative_ or _generative_ models. The main difference here is that (1) generative models will model the positives (the distribution or label to detect) as well as the negatives (the part of the data that is not labeled). When asking a generative model to classify data it will look for a boundary where one model becomes more plausible than the other. Hence they are probabilistic. (2) Discriminative models on the other hand focus on the boundary that separates the labeled from the unlabeled data. Hence they are not probabilistic.
+
+The model used for rosette detection is a discriminative one. During the course of training the model is optimized to reach a _softmax_^[An important metric in object detection is the _softmax_-score (also "detection score", the final result of all weights of the NN). It is a metric that tells about the security of the network how safe it is in its prediction.] of 1 which later allows to make a statement if the pattern is more similar to a pattern of one class seen in the training data than to patterns of the other class. The gradation however is not necessarily linear, which makes a statement like 'the mutant rosette is 50$\%$ wildtype' impossible. However, even for generative models we have the problem of chosing the right set of training data that covers all the aspects and expressions of possibly occuring real patterns. In addition there is the problem of modelling multi-modal distributions. Many questions that cannot be answered conclusively, but do not prevent us from using these models in the hope that they will do something useful and keep us busy for many years to come.
 
 ## Shroom3
 
 ### Lateral Line
 
-Two additional CCs are deposited in _shroom3_-\- embryos. Proliferation is not increased in the pLLP but in CCs once they are deposited (section \@ref(res-prolpllp)), therefore the increase in CC count is unrelated to the amount of proliferation in the pLLP. The cell count and area per CC show an average reduction of 6$\%$ respectively and no difference in density (section \@ref(res-llmorph)).
+Till end of migration, on average two additional CCs are deposited in _shroom3_-\- embryos. Proliferation is not increased in the pLLP - but in CCs once they are deposited (section \@ref(res-prolpllp)) reaching at ~ 2 dpf wild-type levels of cells _per_ area. Therefore the increase in CC count is unrelated to the amount of proliferation in the pLLP. While I did not quantify the size of CCs directly after deposition, it seems likely that the observation of an increase in proliferation after CCs are deposited is due to a compensatory effect. Interestingly, there are reports showing an _inexhaustable_ hair cell generation [@Pinto-Teixeira2015] which seems to be triggered by an interaction between WNT and Notch Pathways [@Romero-Carvajal2015; @Head2013; @Wada2013]. The cell count and area per CC show an average reduction of 6$\%$ respectively and no difference in density (section \@ref(res-llmorph)).
 
-The shroom3-\- LL phenotype can be mimicked by inhibition of Rock but not rescued by activation of NMII (section \@ref(res-rockresc)), leading to the conclusion that Rock is necessary for proper rosette assembly and CC deposition. CC count can also be rescued by ectopic expression of a Shroom3-RFP fusion protein (section \@ref(res-shrmresc)), leading to the conclusion that Shroom3 has a function necessary and sufficient for proper LL development.
+As shown before [@Nishimura2008; @Ernst2012a; @Plageman2011] the _shroom3_-\- LL phenotype can be mimicked by inhibition of Rock. With our methods we were able to reproduce these results, leading to the conclusion that Rock is necessary for proper rosette assembly and CC deposition. However, since Rock and NMII action are needed in many developmental processes, modification of Rock activity means interfering with various developmental processes. Therefore, other unforseen interactions are possible. End of migration analysis also shows that the average length of the LL does not differ, suggesting that speed is not affected. This is confirmed by time-lapse analysis, which neither shows a difference in speed of migration, nor in acceleration (results, \@ref(fig:rdtreg)).
 
-End of migration analysis also shows that the average length of the LL does not differ, suggesting that speed is not affected. This is confirmed by time-lapse analysis, which neither shows a difference in speed of migration, nor in acceleration (results, \@ref(fig:rdtreg)).
+### Rosette Formation
 
-### Proliferation
+One of the most important and most interesting results of my work is the correlation between rosettiness and CC count as it clearly shows the interdependence between a high median rosettiness and low number of deposited CCs and _vice versa_ - therefore highlighting the role of Shroom3 as a stabilizing factor during NM formation. 
 
-Due to their high regenerative ability, zebrafish are a popular model in regenerative research [@Chitnis2012a; @Mokalled2016; @Harding2014a]. It is well known that zebrafish NMs have a rather high regenerative capacity [@Cruz2015; @Pinto-Teixeira2015; @Wada2013]. 
+To get these results, the essential steps in this study were (1) live imaging (2) and to join the datasets of three different analyses conducted on the same image data. While the CC count can be derived from images of the LL at end of migration, the rosettiness at this timepoint can not be measured anymore since the pLLP disperses into three terminal NMs. Likewise, the rosettiness can be measured in images during migration - but the final CC count is only revealed at end of migration. One possible solution to this is to first take single timepoint images of the pLLP during migration, leave the embryos embedded in agarose while incubating them till end of migration, and then image them again at end of migration to derive the CC count. While this way one can image more emrbyos, one only obtains a single measurement for a single timepoint - making the statistics much poorer. This is mostly due to the measurement of rosettiness. As explained, the result of the _weight_ from the rosette detector does not exactly depict a linear relationship between 0 - no rosette and 1 - perfect rosette. Therefore the variance in measurements may be quite high. Taking however the median of a series of rosettiness measurements from the same pLLP reduces this error. Additionally this kind of procedure produces a number of other useful measurements like speed and acceleration, pLLP area and roundness that may be subject to investigate possible interdependencies.
 
-While I did not quantify the size of CCs directly after deposition, it seems likely that the observation of an increase in proliferation after CCs are deposited is due to a compensatory effect.
-
-### Rosette Detection
-
-With the used fluorescent membrane label epithelial rosettes are relatively simple to detect, even with traditional image processing techniques. The arguably biggest point for criticism is that one usually does not know the features the network has learned to detect. For this issue however there are solutions by now [@Zeiler2013].
-
-An important metric in object detection is the _softmax_-score (also "detection score", the final result of all weights of the NN). It is a metric that tells about the security of the network how safe it is in its prediction. We interpreted this score in a way that lower prediction scores are representative for ‘weaker’ rosettes. However a linear relationship is, due to the activation function, not necessarily given.
-
-### Hair Cell specification
-
-In the pLLP, Notch signaling is important for selection and specification of hair-cells (section \@ref(intro-notch)). Interestingly, our findings are supported by another study where it was shown that upon over-activated Notch signaling, CC deposition happened independent of Shroom3 [@Kozlovskaja-Gumbriene2017]. For our observation this could mean that **1** either expression of _atoh1a_ is up-regulated due to a compensation mechanism to ensure CC deposition or **2** that the cellular rearrangements lead to biased Notch signaling. A phenomenon that in fact has been reported [@Shaya2017a]. For the latter, the proposed model would be that in each micro-rosette the HC is in contact with less cells, but the amount of Notch ligand stays the same. Therefore, lateral inhibition and feedback is stronger, leading to an increase in expression of _atoh1a_ and ultimately to premature CC deposition.
-
-Even though the dataset for hair-cell specification provided a lot of datapoints for statistical testing, the difference for cell counts show only a relatively low significance. This could be attributed to the large variance in measurements. On the other side, not only is there a significant increase in cell count in _shroom3_-\- pLLPs but also an earlier activity of the _atoh1a_ promotor. 
-
-When controlling these results by trying to rescue the _shroom3_-\- with a _atoh1a_ knockdown, neither in _shroom3_-\- nor in _shroom3_++ embryos the first NM is deposited anymore. Both of these results would in theory argue for an Atoh1a dependent mechanism of CC deposition, however this result has not been reported before and would need further validation. Furthermore, even though an MO for p53 was co-injected, MO injection has been shown to potentially have many more unspecific effects due to the high concentrations usually injected [@Schulte-Merker2014c]. For this reason double mutants ( _shroom3_-\-; _atoh1a_-\-) were generated - which at this timepoints however are not analyzed yet.
+As figure \@ref(rdtreg)B-B' shows, the method allows to measure speed and acceleration quite accurarely (as indicated by the standard error). Especially for that time scale, there are no reports where researchers were able to successfully derive these measurements - even though it was long known that phases of acceleration and deceleration existed [@Ghysen2007a]. One of our hypothesis was that the higher number of CCs may be related to phases of acceleration, since here cells within CCs would get stretched more which in absence of Shroom3 may lead to a more easy and therefore more frequent deposition of CCs. However, when observing the timing of CC deposition or correlation with rosettiness, we find nothing to confirm this theory. 
 
 ### Apical Constriction
 
-In addition to visualization, large multidimensional datasets offer the possibility for advanced computational methods such as Machine- and Deep learning. For example one could label cells of a dataset as either leading, trailing, rosette, lateral, ... etc. to train an Machine learning model on. The model could then be used on unlabeled data to assign the previous learned labels to cells that fit the right parameters [@Hartmann2020]. Yet another application example would be to use the Ground Truth image data generated for my studies to train a CNN that potentially would be more robust to data of different quality / resolution and easier to use as it wouldn’t require as much pre-processing.
+The main learning from the quantification of the apical index is that it is far from easy not only to accurately quantify a single cell 3D morphometric feature, but also to interpret it. The main findings from this study are that (1) the difference in A.I. is more pronounced along the major than the minor. For recap, the A.I. is lateral height over the respective fit ellipsoid axis of a cells cross-section at a relative distance from the apex (section \@ref(ACI-param)). If the lateral height was 5 $\mu$m and major / minor were 2 / 1 $\mu$m, then the A.I. major was 2.5 and the A.I. minor 5. The inversion of values represents the reality, where the minor axis is more constricted than the major axis. The axes however do not reflect a specific body axis (anterior - posterior or dorsal - ventral), but essentially the longer (major) and the shorter (minor) axis. If the reduction in A.I. in _shroom3_-/- embryos would occur uniformly we would expect an equal amount of reduction as compared to _shroom3_++ conrols, which they don't. In essence this means that
+
+and (2) the angle.
+
+### Hair Cell specification
+
+In the pLLP, Notch signaling is important for selection and specification of hair-cells (section \@ref(intro-notch)). Interestingly, our findings are supported by another study where it was shown that upon over-activated Notch signaling, CC deposition happened independent of Shroom3 [@Kozlovskaja-Gumbriene2017]. For our observation this could mean that (1) either expression of _atoh1a_ is up-regulated due to a compensation mechanism to ensure CC deposition or (2) that the cellular rearrangements lead to biased Notch signaling. A phenomenon that in fact has been reported [@Shaya2017a]. For the latter, the proposed model would be that in each micro-rosette the HC is in contact with less cells, but the amount of Notch ligand stays the same. Therefore, lateral inhibition and feedback is stronger, leading to an increase in expression of _atoh1a_ and ultimately to premature CC deposition.
+
+Even though the dataset for hair-cell specification provides a solid base for hypothesis testing, the count of Atoh1a expressing cells shows only a relatively low significance difference. This could be attributed to the large variance in measurements. However, the same dataset not also shows an earlier activity of the _atoh1a_ promotor, which is independent of cell count and makes the results more trustworthy. Furthermore, the control experiment of rescuing the _shroom3_-\- phenotype of more deposited CCs _via_ an _atoh1a_ knockdown shows that neither in _shroom3_-\- nor in _shroom3_++ embryos the first NM is deposited anymore revealing a possibly novel role for Atoh1a that has not been reported before. Arguing - in theory - for an Atoh1a dependent mechanism of CC deposition. Furthermore, even though an MO for p53 was co-injected, MO injection has been shown to potentially have many more unspecific effects due to the high concentrations usually injected [@Schulte-Merker2014c]. For this reason double mutants ( _shroom3_-\-; _atoh1a_-\-) were generated - which at this timepoints are not analyzed yet.
 
 ### Model
 
-Based on these results phenotype is defined by a greater than or equal to amount of rosettes that are smaller and have less weight. Those ‘micro-rosettes’ will eventually be deposited, leading to somewhat smaller CCs, which is also supported by analysis of emerging hair cells in the pLLP. The results are summarized and graphically modeled in figure \@ref(fig:summodel).
+Based on my results the phenotype is defined by a greater than or equal to amount of rosettes that are smaller and are less pronounced. In this model Shroom3 acts as a sort of rachet or glue that stabilizes the cell clusters as more cells are integrated and more traction forces are built up. Without this stabilizing force the cell clusters could not aggregate above a certain threshold, which results 'micro-rosettes'. In those micro-rosettes the cells are less densely packed and cells may share more membrane surface to exchange signals by, leading to pre-mature hair cell specification and deposition. The results are summarized and graphically modeled in figure \@ref(fig:summodel).
 
 (ref:summodel) Shroom3 dependent rosette formation. First morphogen FGF binds to FGFR1, usually leading to expression of _shroom3_, interaction with Rock and actin network contraction through phosphorylated NMII. Without Shroom3 there's only a partial contraction of the action network which leads to smaller and more rosettes. Altered cellular morphology then leads to a premature expression of _atoh1a_ and hair-cell specification.
 
-```{r summodel, out.width = '95%', fig.cap = "(ref:summodel)", fig.scap = "Shroom3 dependent rosette formation"}
+```{r summodel, out.width = '95%', fig.pos = 'H', fig.cap = "(ref:summodel)", fig.scap = "Shroom3 dependent rosette formation"}
 knitr::include_graphics("figures/summary/CurrentModel_new-01.png")
 ```
